<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="#FFFFFF"
    tools:context="n.switzloco.beerbatterycharger.MainFrag" >


        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        >
          
           <TextView
	        android:id="@+id/label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical = "true"
	        android:layout_marginTop="10dp"
	        android:layout_marginRight = "10dp"
	 		android:textSize = "22sp"
	 		android:textStyle="bold"
	        android:text="@string/workouttype"  />
          
          <ImageView
              android:id="@+id/imageView1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_marginBottom="12dp"
              android:layout_toLeftOf = "@id/label"
              android:contentDescription="@string/avatar_description"
              android:src="@drawable/partydroid"/>
          
          <Spinner
                  android:id="@+id/spinner1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
	        		android:layout_alignParentRight="true"
	        		android:layout_below="@id/label"
                  android:padding="1dp"
                  android:textSize="@dimen/textSize" />
          
	          
    </RelativeLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        >
        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
 		android:textSize = "24sp"
        android:padding = "4dp"
        android:text="@string/drink_total" />
          
    </RelativeLayout>
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        >
        
           <TextView
	        android:id="@+id/label2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentTop = "true"
	 		android:textSize = "22sp"
	 		android:textStyle="bold"
	        android:text="@string/balanceLabel"  />
           
           <TextView
	        android:id="@+id/drinksUpper"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_toRightOf="@id/label2"
	 		android:textSize = "22sp"
	 		android:textStyle="bold"
	        android:text="@string/drink_total" />


                  </RelativeLayout>
		       <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="0.15"
		        >

              <EditText
                  android:id="@+id/editText1"
                  android:layout_width="90dp"
                  android:layout_height="wrap_content"
                  android:layout_alignParentTop="true"
                  android:layout_centerHorizontal="true"
                  android:layout_margin="2dp"
                  android:ems="10"
                  android:inputType="numberDecimal"
                  android:padding="4dp"
                  android:textSize="30sp" >

                  <requestFocus />
              </EditText>

              <TextView
                  android:id="@+id/textView3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignBottom="@id/editText1"
                  android:layout_toRightOf="@id/editText1"
                  android:padding="1dp"
                  android:text="@string/drink_total"
                  android:textSize="16sp" />
              
               <ImageView
		        android:id="@+id/imageView5"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_marginBottom="30dp"
		        android:layout_toLeftOf = "@id/editText1"
		        android:contentDescription="@string/charge_button"
		        android:src="@drawable/chargeb"
		         />

              </RelativeLayout>
              <RelativeLayout		        
                android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="0.065"
		        >
               <ImageView
		        android:id="@+id/imageView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:layout_alignParentLeft="true"
		        android:contentDescription="@string/drink_button"
		        android:src="@drawable/drinkb" />
               <TextView 
                   android:id="@+id/drinkText"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@id/imageView3"
                   android:text="@string/drink_button"
                   android:textSize="14sp"
                   android:layout_centerVertical="true"
                   android:layout_marginLeft="0dp"
                   ></TextView>
               <ImageView
		        android:id="@+id/imageView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:layout_alignParentRight="true"
		        android:contentDescription="@string/bank_button"
		        android:src="@drawable/bankb"
		        />
                              <TextView 
                   android:id="@+id/bankText"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toLeftOf="@id/imageView2"
                   android:text="@string/bank_button"
                   android:textSize="14sp"
                   android:layout_centerVertical="true"
                   android:layout_marginRight="0dp"
                   ></TextView>


          
    </RelativeLayout>


</LinearLayout>
